// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GnoVault - upgrade does not modify the state variables 1`] = `
Object {
  "calldataByteLength": 100,
  "gasUsed": 102798,
}
`;

exports[`GnoVault - upgrade does not modify the state variables 2`] = `
Object {
  "calldataByteLength": 100,
  "gasUsed": 103012,
}
`;

exports[`GnoVault - upgrade does not modify the state variables 3`] = `
Object {
  "calldataByteLength": 100,
  "gasUsed": 102902,
}
`;

exports[`GnoVault - upgrade does not modify the state variables 4`] = `
Object {
  "calldataByteLength": 100,
  "gasUsed": 103462,
}
`;

exports[`GnoVault - upgrade does not modify the state variables 5`] = `
Object {
  "calldataByteLength": 100,
  "gasUsed": 103676,
}
`;

exports[`GnoVault - upgrade does not modify the state variables 6`] = `
Object {
  "calldataByteLength": 100,
  "gasUsed": 103566,
}
`;

exports[`GnoVault - upgrade does not modify the state variables 7`] = `
Object {
  "calldataByteLength": 100,
  "gasUsed": 102876,
}
`;
